<resources>
    <string name="app_name">WEBTOON</string>
    <string name="navtitle_home">HOME</string>
    <string name="navtitle_jadwal">JADWAL</string>
    <string name="navtitle_challenge">CHALLENGE</string>
    <string name="navtitle_favoritku">FAVORITKU</string>
    <string name="navtitle_more">MORE</string>
    <string name="daily_feature">Daily Featured</string>
    <string name="senin">SEN</string>
    <string name="selasa">SEL</string>
    <string name="rabu">RAB</string>
    <string name="kamis">KAM</string>
    <string name="jumat">JUM</string>
    <string name="sabtu">SAB</string>
    <string name="minggu">MIN</string>
    <string name="episode_lengkap">EPISODE LENGKAP</string>
    <string name="jadwal_harian">Jadwal Harian</string>
    <string name="terbaru">TERBARU</string>
    <string name="webtoon_favorit">WEBTOON FAVORIT</string>
    <string name="unduhan">UNDUHAN</string>
    <string name="komentar">KOMENTAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="line_login">Masuk dengan LINE</string>
</resources>
