<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.pmdproject.Daily_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Light">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/daily_tb"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <TextView
                android:id="@+id/tb_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jadwal Harian"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </android.support.v7.widget.Toolbar>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.design.widget.TabLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/dailytabs"
                app:tabMode="scrollable"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TabItem
                    android:text="@string/senin"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
                <android.support.design.widget.TabItem
                    android:text="@string/selasa"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
                <android.support.design.widget.TabItem
                    android:text="@string/rabu"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <android.support.design.widget.TabItem
                    android:text="@string/kamis"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <android.support.design.widget.TabItem
                    android:text="@string/jumat"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <android.support.design.widget.TabItem
                    android:text="@string/sabtu"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <android.support.design.widget.TabItem
                    android:text="@string/minggu"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <android.support.design.widget.TabItem
                    android:text="@string/episode_lengkap"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </android.support.design.widget.TabLayout>
        </HorizontalScrollView>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/dailyvp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>
</LinearLayout>
