<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.pmdproject.Fav_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fav_tb"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    <android.widget.HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:scrollbars="none" >
        <android.support.design.widget.TabLayout
            android:id="@+id/favtabs"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TabItem
                android:text="@string/terbaru"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <android.support.design.widget.TabItem
                android:text="@string/webtoon_favorit"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <android.support.design.widget.TabItem
                android:text="@string/unduhan"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <android.support.design.widget.TabItem
                android:text="@string/komentar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </android.support.design.widget.TabLayout>
    </android.widget.HorizontalScrollView>
    <android.support.v4.view.ViewPager
        android:id="@+id/favvp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

</LinearLayout>
